fixed the content aligning in modals and homepage

--- a/style.css
+++ b/style.css
@@ -51,18 +51,21 @@ button {
 .homeContainer,
 .recipeModal,
 .searchModal {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 95%;
-  height: 95%;
-  background-color: tan;
-  border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 95%;
+    height: 95%;
+    background-color: tan;
+    border-radius: 30px;
+}
+
+.homeContainer {
+    justify-content: center;
 }
 
 .homeContainer > button {
